2008-02-04  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Commands/FileCommands.cs: Dispose new file dialog. Fixes
	  "Bug 358361 - Have to hit esc twice to close the file/new file dialog".
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs, gtk-gui/gui.stetic:
	  Set title on "New File" window window. Partial workaround for "Bug
	  358370 - Add new file dialog says "unknown" in the window title".

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/ICodeStyleOperations.cs,
	  MonoDevelop.Ide.Commands/EditCommands.cs, MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs,
	  MonoDevelop.Ide.Gui/TextEditor.cs: Converted comment/uncomment to the
	  more common toggle comment logic.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: Structured main menu.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* options/KeyBindingSchemeEmacs.xml,
	  options/KeyBindingSchemeVisualStudio.xml,
	  options/KeyBindingSchemeDefault.xml: Fixed key binding sheme.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/IEditable.cs,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Implemented Bug 323946 -
	  Undo/Redo functionality are not context sensitive.
	* MonoDevelop.Ide.mdp: Renamed MonoDevelop.Dom namespace to
	  MonoDevelop.Ide.Dom

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Dom.Parser/AbstractParser.cs,
	  MonoDevelop.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Dom.Parser/IParser.cs, MonoDevelop.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Dom.Output/Ambience.cs,
	  MonoDevelop.Dom.Output/NetAmbience.cs, MonoDevelop.Dom/IMember.cs,
	  MonoDevelop.Dom/DomReturnType.cs, MonoDevelop.Dom/DomType.cs,
	  MonoDevelop.Dom/TypeParameter.cs, MonoDevelop.Dom/ParameterModifiers.cs,
	  MonoDevelop.Dom/DomRegion.cs, MonoDevelop.Dom/DomUsing.cs,
	  MonoDevelop.Dom/Error.cs, MonoDevelop.Dom/IMethod.cs,