@@ -1,3 +1,7 @@
+2008-02-05  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Ide.addin.xml: Fixed a label.
+
 2008-02-04  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Ide.Commands/FileCommands.cs: Dispose new file dialog. Fixes
